# assignment-rise

./: LICENSE  README.md  pyproject.toml  requirements.txt
assignment_rise/: train_A.py  train_B.py
assignment_rise/examples/: inference.ipynb  testing_error_analysis_B.ipynb
assignment_rise/examples/.ipynb_checkpoints/: testing_error_analysis_A-checkpoint.ipynb
assignment_rise/models/: roberta.py
assignment_rise/utils/: labels.py  nerd_handler.py  utils.py
