[tool.poetry]
name = "assignment-rise"
version = "0.1.0"
description = ""
authors = ["Ahmad Z. Ihsan <a.ihsan@fz-juelich.de>"]
readme = "README.md"
packages = [{include = "assignment_rise"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.25.0"
scikit-learn = "1.3.2"
transformers = "4.36.1"
bitsandbytes = "0.41.3.post2"
datasets = "2.15.0"
matplotlib = "3.8.2"
peft = "0.7.1"
seqeval = "1.2.2"
evaluate = "0.4.1"
pandas = "2.1.4"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
